--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.28.1",
     "react-table": "^7.7.0",
     "reactstrap": "^8.9.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
